--- a/overview/scenarios.html
+++ b/overview/scenarios.html
@@ -5,7 +5,17 @@ layout: default
 <h1>Scenarios</h1>
 
 <p>
-    tbd Erklärung
+    Szenarien beschreiben Situationen, in denen Menschen mit einem System interagieren (Handlungsstrang).
+    Diese Situationen haben einen klar definierten Kontext. Szenarien dienen einerseits zur informellen
+    Erfassung von Anforderungen an ein System, und andererseits zur Evaluation eines Systems bzgl.
+    formalisierter Ziele und Anforderungen.
+</p>
+<p>
+    Szenarien orientieren sich an den zuvor erstellten (Personas)[./personas.html]. Sie können sich auf
+    die aktuelle Situation beziehen (IST-Szenario) oder auf die zukünftige (verbesserte) Situation
+    (SOLL-Szenario). Szenarien fokussieren sich dabei auf die Aktivitäten der Menschen, und weniger auf
+    konkrete Interaktionen. Zudem beinhalten diese die Nutzungsumgebung der Anwendung oder des Systems,
+    die Nutzungsdauer, die Unterbrechungswahrscheinlichkeit und die Nutzung anderer Anwendungen.
 </p>
 
 
