--- a/overview/functionalRequirements.html
+++ b/overview/functionalRequirements.html
@@ -33,13 +33,9 @@ layout: default
         {% assign functionalRequirements = site.functionalRequirements | sort: "prefilterPriorizationPoints" | reverse %}
         {% for functionalRequirement in functionalRequirements %}
         <tr>
-            {% include /functions/checks/check-generic-aspects.html myArtefact=functionalRequirement
-                        myErrorString="" myWarningString="" %}
-            {% include /functions/checks/check-goal-refs.html myArtefact=functionalRequirement
-                        myErrorString=errorString myWarningString=warningString %}
-            {% include /functions/checks/check-functionalRequirement.html myArtefact=functionalRequirement
-                        myErrorString=errorString myWarningString=warningString %}
-            {% include /functions/get-check-icon.html errors=errorString warnings=warningString todos=functionalRequirement.todo %}
+            {% include /functions/checks/check-functionalRequirement.html myArtefact=functionalRequirement %}
+            {% include /functions/get-check-icon.html errors=errorString warnings=warningString
+                    todos=functionalRequirement.todo %}
             <td>{{ iconString }}</td>
 
             {% include /functions/get-globalid.html myCollection=site.functionalRequirements
