--- a/overview/reviews.html
+++ b/overview/reviews.html
@@ -24,10 +24,8 @@ layout: default
 
         {% for review in collection %}
         <tr>
-            {% include /functions/checks/check-generic-aspects.html myArtefact=review
-                        myErrorString="" myWarningString="" %}
-            {% include /functions/get-check-icon.html errors=errorString warnings=warningString
-                    todos=review.todo %}
+            {% include /functions/checks/check-review.html myArtefact=review %}
+            {% include /functions/get-check-icon.html errors=errorString warnings=warningString todos=review.todo %}
             <td>{{ iconString }}</td>
 
             {% include /functions/get-globalid.html myCollection=site.stakeholders
