--- a/overview/stakeholders.html
+++ b/overview/stakeholders.html
@@ -32,14 +32,7 @@ layout: default
         {% assign collection = site.stakeholders | sort: sortField %}
         {% for stakeholder in collection %}
         <tr>
-            {% include /functions/checks/check-generic-aspects.html myArtefact=stakeholder
-                        myErrorString="" myWarningString="" %}
-            {% assign stakeholderRoleRef = stakeholder.stakeholderRole %}
-            {% include /functions/checks/check-stakeholderRole-refs.html myStakeholderRoleRef=stakeholderRoleRef
-                        myAsList=true myPurpose="Stakeholder-Rolle"
-                        myErrorString=errorString myWarningString=warningString %}
-            {% include /functions/checks/check-stakeholder.html myArtefact=stakeholder
-                        myErrorString=errorString myWarningString=warningString %}
+            {% include /functions/checks/check-stakeholder.html myArtefact=stakeholder %}
             {% include /functions/get-check-icon.html errors=errorString warnings=warningString todos=stakeholder.todo %}
             <td>{{ iconString }}</td>
 
