--- a/overview/interviews.html
+++ b/overview/interviews.html
@@ -24,8 +24,7 @@ layout: default
         {% for interview in collection %}
         <tr>
             <td>&nbsp;</td>
-            {% include /functions/get-globalid.html myCollection=site.interviews
-                    myArtefact=interview myType="interview" %}
+            {% include /functions/get-globalid.html myArtefact=interview  %}
             <td><a href="{{ site.url }}{{ interview.url | relative_url }}">{{ globalId }}</a></td>
             <td>{% include /functions/print-link-to-stakeholder.html myStakeholderAcronym=interview.stakeholder %}</td>
             <td><a href="{{ site.url }}{{ interview.url | relative_url }}">{{ interview.date | date: '%d.%m.%Y'}}</a></td>
