--- a/overview/personas.html
+++ b/overview/personas.html
@@ -23,7 +23,8 @@ layout: default
     {% assign collection = site.personas | sort: sortField %}
     {% for persona in collection %}
         <tr>
-            <td><a href="{{ site.url }}{{ persona.url | relative_url }}">{{ persona.name }}</a></td>
+            {% include /functions/get-artefact-name.html myArtefact=persona %}
+            <td><a href="{{ site.url }}{{ persona.url | relative_url }}">{{ artefactName }}</a></td>
             {% include /functions/get-link-to-stakeholder-role.html myRoleAcronym=persona.stakeholderRole withId=false %}
             <td>{{ stakeholderRoleLink }}</td>
         </tr>
