--- a/overview/functionalRequirements.html
+++ b/overview/functionalRequirements.html
@@ -40,7 +40,9 @@ layout: default
 
             {% include /functions/get-globalid.html myArtefact=functionalRequirement  %}
             <td><a href="{{ site.url }}{{ functionalRequirement.url | relative_url }}">{{ globalId }}</a></td>
-            <td><a href="{{ site.url }}{{ functionalRequirement.url | relative_url }}">{{ functionalRequirement.title }}</a></td>
+
+            {% include /functions/get-artefact-name.html myArtefact=functionalRequirement %}
+            <td><a href="{{ site.url }}{{ functionalRequirement.url | relative_url }}">{{ artefactName }}</a></td>
 
             <td>{% include /functions/print-goalrefs-as-id-with-links.html myArtefact=functionalRequirement %}</td>
 
