--- a/overview/interviews.html
+++ b/overview/interviews.html
@@ -13,9 +13,8 @@ layout: default
     <thead>
     <tr>
         <th width="5%"></th>
-        <th width="10%">ID</th>
+        <th width="50%">Interview-Protokoll</th>
         <th width="30%">Interviewpartner (Stakeholder)</th>
-        <th width="15%">Datum</th>
     </tr>
     </thead>
     <tbody>
@@ -24,10 +23,9 @@ layout: default
         {% for interview in collection %}
         <tr>
             <td>&nbsp;</td>
-            {% include /functions/get-globalid.html myArtefact=interview  %}
-            <td><a href="{{ site.url }}{{ interview.url | relative_url }}">{{ globalId }}</a></td>
+            {% include /functions/get-artefact-name.html myArtefact=interview myIdFormat="prefix" %}
+            <td><a href="{{ site.url }}{{ interview.url | relative_url }}">{{ artefactName }}</a></td>
             <td>{% include /functions/print-link-to-stakeholder.html myStakeholderAcronym=interview.stakeholder %}</td>
-            <td><a href="{{ site.url }}{{ interview.url | relative_url }}">{{ interview.date | date: '%d.%m.%Y'}}</a></td>
         </tr>
         {% endfor %}
     </tbody>
