--- a/overview/surveys.html
+++ b/overview/surveys.html
@@ -24,7 +24,8 @@ layout: default
     {% assign collection = site.surveys | sort: sortField %}
     {% for survey in collection %}
         <tr>
-            <td><a href="{{ site.url }}{{ survey.url | relative_url }}">{{ survey.subject }}</a></td>
+            {% include /functions/get-artefact-name.html myArtefact=survey %}
+            <td><a href="{{ site.url }}{{ survey.url | relative_url }}">{{ artefactName }}</a></td>
             {% include /functions/get-link-to-stakeholder-role.html myRoleAcronym=survey.stakeholder_role withId=false %}
             <td>{{ stakeholderRoleLink }}</td>
         </tr>
