--- a/overview/systemContextElements.html
+++ b/overview/systemContextElements.html
@@ -24,7 +24,8 @@ layout: default
     {% for systemContextElement in collection %}
     <tr>
         <td><a href="{{ site.url }}{{ systemContextElement.url | relative_url }}">{{ systemContextElement.acronym }}</a></td>
-        <td><a href="{{ site.url }}{{ systemContextElement.url | relative_url }}">{{ systemContextElement.type }}</a></td>
+        {% include /functions/get-artefact-name.html myArtefact=systemContextElement %}
+        <td><a href="{{ site.url }}{{ systemContextElement.url | relative_url }}">{{ artefactName }}</a></td>
     </tr>
     {% endfor %}
     </tbody>
