--- a/overview/surveys.html
+++ b/overview/surveys.html
@@ -26,8 +26,9 @@ layout: default
         <tr>
             {% include /functions/get-artefact-name.html myArtefact=survey %}
             <td><a href="{{ site.url }}{{ survey.url | relative_url }}">{{ artefactName }}</a></td>
-            {% include /functions/get-link-to-stakeholder-role.html myRoleAcronym=survey.stakeholder_role withId=false %}
-            <td>{{ stakeholderRoleLink }}</td>
+            {% include /functions/get-link-to-artefact.html myRef=survey.stakeholderRole myTypeString="stakeholderRole"
+                    myIdFormat="prefix" %}
+            <td>{{ artefactLink }}</td>
         </tr>
         {% endfor %}
     </tbody>
