--- a/overview/stakeholders.html
+++ b/overview/stakeholders.html
@@ -44,8 +44,9 @@ layout: default
             <td>
                 {% assign linkList = "" | split: ";" %}
                 {% for shr in stakeholder.stakeholderRole %}
-                    {% include /functions/get-link-to-stakeholder-role.html myRoleAcronym=shr withId=false %}
-                    {% assign linkList = linkList | push: stakeholderRoleLink %}
+                    {% include /functions/get-link-to-artefact.html myRef=shr myTypeString="stakeholderRole"
+                            myIdFormat="none" %}
+                    {% assign linkList = linkList | push: artefactLink %}
                 {% endfor %}
                 {% assign linkString = linkList | join: ",<br/>" %}
                 {{ linkString }}
