--- a/overview/functionalRequirements.html
+++ b/overview/functionalRequirements.html
@@ -21,12 +21,12 @@ layout: default
     <thead>
     <tr>
         <th width="5%"></th>
-        <th width="10%">ID</th>
+        <th width="15%">ID</th>
         <th width="25%">Name</th>
-        <th width="25%">Zahlt ein auf Ziel(e)</th>
-        <th width="10%">Implementierungs-Status</th>
-        <th width="10%">Kano-Typ</th>
-        <th width="10%" style="text-align:center !important;">Punkte aus Vorpriorisierung</th>
+        <th width="15%">Zahlt ein auf Ziel(e)</th>
+        <th width="8%">Implementierungs-Status</th>
+        <th width="8%">Kano-Typ</th>
+        <th width="8%" style="text-align:center !important;">Punkte aus Vorpriorisierung</th>
     </tr>
     </thead>
     <tbody>
@@ -44,7 +44,16 @@ layout: default
             {% include /functions/get-artefact-name.html myArtefact=functionalRequirement %}
             <td><a href="{{ site.url }}{{ functionalRequirement.url | relative_url }}">{{ artefactName }}</a></td>
 
-            <td>{% include /functions/print-goalrefs-as-id-with-links.html myArtefact=functionalRequirement %}</td>
+            {% assign goalIdList = "" | split: ";" %}
+            {% if functionalRequirement.goals %}
+                {% for goalRef in functionalRequirement.goals %}
+                    {% include /functions/get-link-to-artefact.html myRef=goalRef myTypeString="goal"
+                            myIdFormat="onlyId" %}
+                    {% assign goalIdList = goalIdList | push: artefactLink %}
+                {% endfor %}
+            {% endif %}
+            {% assign goalIdString = goalIdList | join: ", " %}
+            <td>{{ goalIdString }}</td>
 
             {% include /functions/get-implementation-status.html my_requirement=functionalRequirement %}
             <td>{{ implementationStatus }}</td>
