--- a/overview/interviews.html
+++ b/overview/interviews.html
@@ -25,7 +25,10 @@ layout: default
             <td>&nbsp;</td>
             {% include /functions/get-artefact-name.html myArtefact=interview myIdFormat="prefix" %}
             <td><a href="{{ site.url }}{{ interview.url | relative_url }}">{{ artefactName }}</a></td>
-            <td>{% include /functions/print-link-to-stakeholder.html myStakeholderAcronym=interview.stakeholder %}</td>
+
+            {% include /functions/get-link-to-artefact.html myRef=interview.stakeholder myTypeString="stakeholder"
+                    myIdFormat="prefix" %}
+            <td>{{ <artefactLink></artefactLink> }}</td>
         </tr>
         {% endfor %}
     </tbody>
