--- a/overview/interviews.html
+++ b/overview/interviews.html
@@ -28,7 +28,7 @@ layout: default
 
             {% include /functions/get-link-to-artefact.html myRef=interview.stakeholder myTypeString="stakeholder"
                     myIdFormat="prefix" %}
-            <td>{{ <artefactLink></artefactLink> }}</td>
+            <td>{{ artefactLink }}</td>
         </tr>
         {% endfor %}
     </tbody>
