overhauling scenario & persona

--- a/overview/scenarios.html
+++ b/overview/scenarios.html
@@ -2,10 +2,10 @@
 layout: default
 ---
 
-<h1>Scenarios</h1>
+<h1>Szenarien</h1>
 
 <p>
-    Szenarien beschreiben Situationen, in denen Menschen mit einem System interagieren (Handlungsstrang).
+    <b>Szenarien</b> beschreiben Situationen, in denen Menschen mit einem System interagieren (Handlungsstrang).
     Diese Situationen haben einen klar definierten Kontext. Szenarien dienen einerseits zur informellen
     Erfassung von Anforderungen an ein System, und andererseits zur Evaluation eines Systems bzgl.
     formalisierter Ziele und Anforderungen.
