added links between uc/us and fr

--- a/overview/useCases.html
+++ b/overview/useCases.html
@@ -36,7 +36,7 @@ layout: default
 
         {% include /functions/get-link-to-artefact.html myRef=useCase.functionalRequirement
                 myTypeString="functionalRequirement" myIdFormat="prefix" %}
-        <td><a href="{{ site.url }}{{ useCase.url | relative_url }}">{{ artefactLink }}</a></td>
+        <td>{{ artefactLink }}</td>
     </tr>
     {% endfor %}
     </tbody>
