--- a/overview/personas.html
+++ b/overview/personas.html
@@ -30,7 +30,7 @@ layout: default
             <td>{{ iconString }}</td>
 
             {% include /functions/get-globalid.html myArtefact=persona %}
-            <td><a href="{{ site.url }}{{ scenario.url | relative_url }}">{{ globalId }}</a></td>
+            <td><a href="{{ site.url }}{{ persona.url | relative_url }}">{{ globalId }}</a></td>
 
             {% include /functions/get-artefact-name.html myArtefact=persona %}
             <td><a href="{{ site.url }}{{ persona.url | relative_url }}">{{ artefactName }}</a></td>
